syntax = "proto3";

option csharp_namespace = "ED.DomainServices.Blobs";

package blob;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

service Blob {
  // list
  rpc GetMyProfileBlobs (GetMyProfileBlobsRequest) returns (GetMyProfileBlobsResponse);
  rpc GetProfileFreeBlobs (GetProfileFreeBlobsRequest) returns (GetProfileFreeBlobsResponse);
  rpc GetProfileInboxBlobs (GetProfileInboxBlobsRequest) returns (GetProfileInboxBlobsResponse);
  rpc GetProfileOutboxBlobs (GetProfileOutboxBlobsRequest) returns (GetProfileOutboxBlobsResponse);

  // upload
  rpc DeleteProfileBlob (DeleteProfileBlobRequest) returns (google.protobuf.Empty);
}

message GetMyProfileBlobsRequest {
  int32 login_id = 1;
  int32 profile_id = 2;
  google.protobuf.Int64Value max_file_size = 3;
  repeated google.protobuf.StringValue allowed_file_types = 4;
  int32 offset = 5;
  int32 limit = 6;
}

message GetMyProfileBlobsResponse {
  message Blob {
    int32 blob_id = 1;
    string file_name = 2;
    string hash_algorithm = 3;
    string hash = 4;
    int64 size = 5;
    google.protobuf.Timestamp create_date = 6;
    bool is_not_malicious = 7;
    bool is_malicious = 8;
    bool is_not_sure = 9;
  }
  repeated Blob result = 1;
  int32 length = 2;
}

message GetProfileFreeBlobsRequest {
  int32 login_id = 1;
  int32 profile_id = 2;
  int32 offset = 3;
  int32 limit = 4;
  string file_name = 5;
  string author = 6;
  google.protobuf.Timestamp from_date = 7;
  google.protobuf.Timestamp to_date = 8;
}

message GetProfileFreeBlobsResponse {
  message Blob {
    int32 blob_id = 1;
    string file_name = 2;
    int64 size = 3;
    google.protobuf.Timestamp create_date = 4;
    bool is_not_malicious = 5;
    bool is_malicious = 6;
    bool is_not_sure = 7;
  }
  repeated Blob result = 1;
  int32 length = 2;
  uint64 storage_quota = 3;
  uint64 used_storage_space = 4;
}

message GetProfileInboxBlobsRequest {
  int32 login_id = 1;
  int32 profile_id = 2;
  int32 offset = 3;
  int32 limit = 4;
  string file_name = 5;
  string message_subject = 6;
  google.protobuf.Timestamp from_date = 7;
  google.protobuf.Timestamp to_date = 8;
}

message GetProfileInboxBlobsResponse {
  message Blob {
    int32 blob_id = 1;
    string file_name = 2;
    int64 size = 3;
    google.protobuf.Timestamp create_date = 4;
    bool is_not_malicious = 5;
    bool is_malicious = 6;
    bool is_not_sure = 7;
    google.protobuf.Int32Value message_id = 8;
    google.protobuf.StringValue message_subject = 9;
  }
  repeated Blob result = 1;
  int32 length = 2;
}

message GetProfileOutboxBlobsRequest {
  int32 login_id = 1;
  int32 profile_id = 2;
  int32 offset = 3;
  int32 limit = 4;
  string file_name = 5;
  string message_subject = 6;
  google.protobuf.Timestamp from_date = 7;
  google.protobuf.Timestamp to_date = 8;
}

message GetProfileOutboxBlobsResponse {
  message Blob {
    int32 blob_id = 1;
    string file_name = 2;
    int64 size = 3;
    google.protobuf.Timestamp create_date = 4;
    bool is_not_malicious = 5;
    bool is_malicious = 6;
    bool is_not_sure = 7;
    google.protobuf.Int32Value message_id = 8;
    google.protobuf.StringValue message_subject = 9;
  }
  repeated Blob result = 1;
  int32 length = 2;
}

message DeleteProfileBlobRequest {
  int32 login_id = 1;
  int32 profile_id = 2;
  int32 blob_id = 3;
}
